@@ -1,8 +1,11 @@
-<!-- Automagically generated by the ToDo program on 2005-04-07 -->
+<!-- Automagically generated by the ToDo program on 04/07/05, 10:13 -->
 <todo version="0.1.18">
     <title>
         Todo list for herdstat
     </title>
+    <note priority="veryhigh" time="1112883193">
+        Move get_possibles into the lib ( find_package() maybe? ).
+    </note>
     <note priority="high" time="1112625892">
         Write some kind of version string class, that besides representing the version string as a string, also can be accesssed via operator[] like verstr["PV"].
     </note>
