@@ -46,6 +46,7 @@
 #include "util_exceptions.hh"
 #include "portage_misc.hh"
 #include "portage_config.hh"
+#include "portage_version.hh"
 
 enum color_name_T
 {
